[tool.poetry]
name = "repl-nix-sorting-algorithm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_sorting_algorithm"}]

[tool.poetry.dependencies]
python = "^3.10"
pip = "^24.0"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
